--- a/docs/_includes/component/overview.html
+++ b/docs/_includes/component/overview.html
@@ -111,12 +111,12 @@ LoadingBarProvider.maxHeight = 3;
             <tr>
                 <th rowspan="5">Directive</th>
                 <td>js</td>
-                <td>Upper Camelcase</td>
+                <td>Lower Camelcase</td>
                 <td>- </td>
-                <td>LoadingBar</td>
+                <td>loadingBar</td>
                 <td>
 {% highlight js %}
-angular.directive('LoadingBar', [, function(){
+angular.directive('loadingBar', [, function(){
     ...
 }]);
 {% endhighlight %}
