--- a/docs/_includes/nav/component.html
+++ b/docs/_includes/nav/component.html
@@ -22,60 +22,42 @@
 <li>
     <a href="#dropdown">Dropdown</a>
     <ul>
-        <li><a href="#dropdown-basic">Contoh Dasar</a></li>
-        <li><a href="#dropdown-list">Dropdown List</a></li>
-        <li><a href="#dropdown-button">Tombol</a></li>
-        <li><a href="#dropdown-fx">Efek-efek</a></li>
+        <li><a href="#dropdown-menu">Menu / List</a></li>
         <li><a href="#dropdown-content">Custom Content</a></li>
     </ul>
 </li>
 <li>
     <a href="#toast">Toast</a>
     <ul>
-        <li><a href="#toast-basic">Contoh Dasar</a></li>
+        <li><a href="#toast-setup">Setup</a></li>
+        <li><a href="#toast-example">Contoh</a></li>
         <li><a href="#toast-config">Pengaturan / Config</a></li>
-        <li><a href="#toast-event">Event</a></li>
-        <li><a href="#toast-service">Service</a></li>
-        <li><a href="#toast-templating">Mengubah Template</a></li>
     </ul>
 </li>
 <li>
     <a href="#tab">Content Tab</a>
     <ul>
         <li><a href="#tab-basic">Contoh Dasar</a></li>
-        <li><a href="#tab-config">Pengaturan / Config</a></li>
-        <li><a href="#tab-event">Event</a></li>
-        <li><a href="#tab-service">Service</a></li>
-        <li><a href="#tab-templating">Mengubah Template</a></li>
     </ul>
 </li>
 <li>
     <a href="#loading-bar">Loading Bar</a>
     <ul>
-        <li><a href="#loading-bar-basic">Contoh Dasar</a></li>
-        <li><a href="#loading-bar-config">Pengaturan / Config</a></li>
-        <li><a href="#loading-bar-event">Event</a></li>
+        <li><a href="#loading-bar-setup">Setup</a></li>
         <li><a href="#loading-bar-service">Services</a></li>
-        <li><a href="#loading-bar-templating">Mengubah Template</a></li>
+        <li><a href="#loading-bar-event">Event</a></li>
     </ul>
 </li>
 <li>
     <a href="#image-preloader">Image Preloader</a>
     <ul>
         <li><a href="#image-preloader-basic">Contoh Dasar</a></li>
-        <li><a href="#image-preloader-config">Pengaturan / Config</a></li>
-        <li><a href="#image-preloader-event">Event</a></li>
-        <li><a href="#image-preloader-service">Services</a></li>
-        <li><a href="#image-preloade-templating">Mengubah Template</a></li>
     </ul>
 </li>
 <li>
     <a href="#pagination">Pagination</a>
     <ul>
-        <li><a href="#pagination-basic">Contoh Dasar</a></li>
-        <li><a href="#pagination-config">Pengaturan / Config</a></li>
-        <li><a href="#pagination-service">Services</a></li>
-        <li><a href="#pagination-templating">Mengubah Template</a></li>
+        <li><a href="#pagination-example">Contoh</a></li>
     </ul>
 </li>
 <li>
