--- a/less/components.less
+++ b/less/components.less
@@ -7,9 +7,25 @@
 /**
 * Web Components
 */
-@import "components/loading-bar.less";
 @import "components/navbar.less";
-@import "components/dropdown.less";
 @import "components/button-group.less";
 @import "components/input-group.less";
 
+/**
+ * Angular Directive
+ */
+// form
+@import "components/forms/date-picker.less";
+@import "components/forms/tags-input.less";
+@import "components/forms/auto-complete.less";
+
+// custom
+@import "components/dropdown.less";
+@import "components/alert.less";
+@import "components/toast.less";
+@import "components/loading-bar.less";
+@import "components/pagination.less";
+
+/**
+ * Block
+ */
