--- a/less/components/button-group.less
+++ b/less/components/button-group.less
@@ -123,18 +123,20 @@
 }
 
 
-// Reposition the caret
-.button .caret {
-  margin-left: 0;
-}
-// Carets in other button sizes
-.button-large .caret {
-  border-width: @caret-width-large @caret-width-large 0;
-  border-bottom-width: 0;
-}
-// Upside down carets for .dropup
-.dropup .button-large .caret {
-  border-width: 0 @caret-width-large @caret-width-large;
+.button-group{
+  // Reposition the caret
+  .button .caret {
+    margin-left: 0;
+  }
+  // Carets in other button sizes
+  .button-large .caret {
+    border-width: @caret-width-large @caret-width-large 0;
+    border-bottom-width: 0;
+  }
+  // Upside down carets for .dropup
+  .dropup .button-large .caret {
+    border-width: 0 @caret-width-large @caret-width-large;
+  }
 }
 
 
