--- a/less/mixins.less
+++ b/less/mixins.less
@@ -22,3 +22,7 @@
 @import 'mixins/image.less';
 @import 'mixins/ruler.less';
 @import 'mixins/composite.less';
+
+// components
+@import 'mixins/alert.less';
+
