--- a/docs/_includes/component/pagination.html
+++ b/docs/_includes/component/pagination.html
@@ -1,86 +1,34 @@
-<h1 class="docs-section-title" id="pagination">Pagination</h1>
-<p class="docs-section-desc"></p>
+<h1 class="docs-section-title" id="pagination">Pagination Bar</h1>
+<p class="docs-section-desc">batang halaman</p>
 
 <!-- Contoh Dasar -->
-<h2 class="docs-subsection-title" id="pagination-basic">Contoh Dasar</h2>
+<h2 class="docs-subsection-title" id="pagination-guide">Petunjuk Penggunaan</h2>
 <div class="docs-subsection-desc">
-    <p></p>
+    <p>Untuk menggunakan komponen ini sangat mudah, cukup gunakan direktif <code>pagination-bar</code>, lalu kamu perlu mengatur beberapa parameter pagination.</p>
 </div>
 <div class="docs-tab">
     <ul class="docs-tab-link-container">
         <li>tampilan</li>
-        <li>&lt;html&gt;</li>
+        <li>penggunaan</li>
+        <li>pengaturan</li>
     </ul>
     <div class="docs-tab-content-container">
         <div class="docs-tab-content">
             <div class="docs-example">
+                <pagination-bar current-page="1"
+                    total-items="45">
+                </pagination-bar>
             </div>
         </div>
         <div class="docs-tab-content">
 {% highlight html %}
+<pagination-bar
+    current-page="{integer}"
+    total-items="{integer}"
+    [item-per-page="{integer}"]
+    [path="{string}"]>
+</pagination-bar>
 {% endhighlight %}
-        </div>
-    </div>
-</div>
-
-<!-- Pengaturan / Config -->
-<h2 class="docs-subsection-title" id="pagination-config">Pengaturan / Config</h2>
-<div class="docs-subsection-desc">
-    <p></p>
-</div>
-<div class="docs-tab">
-    <ul class="docs-tab-link-container">
-        <li>tampilan</li>
-        <li>&lt;html&gt;</li>
-    </ul>
-    <div class="docs-tab-content-container">
-        <div class="docs-tab-content">
-            <div class="docs-example">
-            </div>
-        </div>
-        <div class="docs-tab-content">
-{% highlight html %}
-{% endhighlight %}
-        </div>
-    </div>
-</div>
-
-<!-- Service -->
-<h2 class="docs-subsection-title" id="pagination-service">Service</h2>
-<div class="docs-subsection-desc">
-    <p></p>
-</div>
-<div class="docs-tab">
-    <ul class="docs-tab-link-container">
-        <li>tampilan</li>
-        <li>&lt;html&gt;</li>
-    </ul>
-    <div class="docs-tab-content-container">
-        <div class="docs-tab-content">
-            <div class="docs-example">
-            </div>
-        </div>
-        <div class="docs-tab-content">
-{% highlight html %}
-{% endhighlight %}
-        </div>
-    </div>
-</div>
-
-<!-- Mengubah Template -->
-<h2 class="docs-subsection-title" id="pagination-templating">Mengubah Template</h2>
-<div class="docs-subsection-desc">
-    <p></p>
-</div>
-<div class="docs-tab">
-    <ul class="docs-tab-link-container">
-        <li>tampilan</li>
-        <li>&lt;html&gt;</li>
-    </ul>
-    <div class="docs-tab-content-container">
-        <div class="docs-tab-content">
-            <div class="docs-example">
-            </div>
         </div>
         <div class="docs-tab-content">
 {% highlight html %}
