--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,10 +1,12 @@
 <footer>
 
 </footer>
+<toast></toast>
 
 <!-- dependency -->
 <script src="lib/jquery/jquery.js" type="text/javascript"></script>
 <script src="lib/jquery-easing-original/jquery.easing.min.js" type="text/javascript"></script>
+<script src="lib/jquery-hoverIntent/jquery.hoverIntent.js" type="text/javascript"></script>
 <script src="lib/underscore/underscore.js" type="text/javascript"></script>
 <script src="lib/underscore.string/underscore.string.js" type="text/javascript"></script>
 
