--- a/less/components/dropdown.less
+++ b/less/components/dropdown.less
@@ -15,3 +15,125 @@
   border-left:  @caret-width-base solid transparent;
 }
 
+ui-dropdown,
+.ui-dropdown {
+    position: relative;
+    display: inline-block;
+
+    .dropdown-toggle:focus {
+        outline: none;
+    }
+
+    .dropdown-content {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        z-index: @zindex-dropdown;
+        display: none;
+        float: left;
+        margin: 2px 0 0;
+        background-color: @dropdown-bg;
+        border: 1px solid @dropdown-border;
+        .border-radius(@border-radius-base);
+        .box-shadow(0 6px 12px rgba(0,0,0,.175));
+        background-clip: padding-box;
+    }
+
+    // The dropdown menu (ul)
+    .dropdown-menu {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        z-index: @zindex-dropdown;
+        display: none;
+        float: left;
+        min-width: 160px;
+        padding: 5px 0;
+        margin: 2px 0 0; // override default ul
+        list-style: none;
+        font-size: @font-size-base;
+        text-align: left;
+        background-color: @dropdown-bg;
+        border: 1px solid @dropdown-border;
+        .border-radius(@border-radius-base);
+        .box-shadow(0 6px 12px rgba(0,0,0,.175));
+        background-clip: padding-box;
+
+        // Aligns the dropdown menu to right
+        //
+        // Deprecated as of 3.1.0 in favor of `.dropdown-menu-[dir]`
+        &.pull-right {
+            right: 0;
+            left: auto;
+        }
+
+        // Dividers (basically an hr) within the dropdown
+        .divider {
+        .nav-divider(@dropdown-divider-bg);
+        }
+
+        // Links within the dropdown menu
+        > li > a {
+            .transition(background 0.2s ease, color 0.3s ease);
+            display: block;
+            padding: 5px 10px;
+            clear: both;
+            font-weight: normal;
+            line-height: @line-height-base;
+            color: @dropdown-link-color;
+            white-space: nowrap;
+            &:hover,
+            &:focus {
+                text-decoration: none;
+                color: @dropdown-link-hover-color;
+                background-color: @dropdown-link-hover-bg;
+            }
+        }
+
+        > .active > a {
+            &,
+            &:hover,
+            &:focus {
+                color: @dropdown-link-active-color;
+                text-decoration: none;
+                outline: 0;
+                background-color: @dropdown-link-active-bg;
+            }
+        }
+
+        .disabled > a {
+            &,
+            &:hover,
+            &:focus {
+                color: @dropdown-link-disabled-color;
+            }
+            &:hover,
+            &:focus {
+                text-decoration: none;
+                background-color: transparent;
+                background-image: none;
+                cursor: @cursor-disabled;
+            }
+        }
+
+        &.dropdown-menu-right {
+            left: auto;
+            right: 0;
+        }
+
+        &.dropdown-menu-left {
+            left: 0;
+            right: auto;
+        }
+
+        .dropdown-header {
+            display: block;
+            padding: 3px 10px;
+            font-size: @font-size-small;
+            line-height: @line-height-base;
+            color: @dropdown-header-color;
+            white-space: nowrap;
+        }
+
+    }
+}
