--- a/less/mixins/forms.less
+++ b/less/mixins/forms.less
@@ -26,6 +26,7 @@
   // Set the border and box shadow on specific inputs to match
   .form-control {
     border-color: @border-color;
+    color: @text-color;
     .box-shadow(inset 0 1px 1px rgba(0,0,0,.075)); // Redeclare so transitions work
     &:focus {
       border-color: darken(@border-color, 10%);
